[gd_scene load_steps=5 format=3 uid="uid://svwcuis3ibqt"]

[ext_resource type="Texture2D" uid="uid://bm0psi3xspjou" path="res://assets/pixel heart 2.png" id="1_ahcct"]
[ext_resource type="Script" uid="uid://dyud6qd1p303c" path="res://Scenes/UI/ui.gd" id="1_de23q"]

[sub_resource type="LabelSettings" id="LabelSettings_de23q"]
font_size = 48
font_color = Color(0.42745098, 0.94509804, 0.94509804, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0.8039216, 1, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_c7mb3"]
font_size = 36
font_color = Color(0.58463585, 0.94494206, 0.99999994, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="Ui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_de23q")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50

[node name="score" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "分数：0"

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/h_separation = 30
columns = 3

[node name="Label" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/GridContainer/Label"]
texture_filter = 1
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_ahcct")
centered = false
offset = Vector2(0, -4)

[node name="Label2" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/GridContainer/Label2"]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_ahcct")
centered = false

[node name="Label3" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/GridContainer/Label3"]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_ahcct")
centered = false

[node name="GmaeOver" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"
label_settings = SubResource("LabelSettings_de23q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="tg" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "恭喜通关了！！！"
label_settings = SubResource("LabelSettings_c7mb3")
